# arjun

./: .clang-tidy  .gitignore  .vimsettings.vim  BENCHMARKS-interp.md  CLAUDE.md  CMakeLists.txt  IDEAS-3-categories.md  LICENSE  MANIFEST.in  README.md  TODO-unate.md  arjunConfig.cmake.in  bug_real.cnf  bug_real.md  bug_real_big.cnf  flake.nix  ideas.md  improve_repair.md  misConfig.cmake.in  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  cmake.yml  nix.yml  release.yml
cmake/: FindGMP.cmake  FindMLPACK.cmake  arjunConfig-buildtree.cmake.in
documents/: conditional_unate.md  unate_def_rep_2qbf.md
html/: index.html  rsync.sh
python/: README.rst
python/src/: GitSHA1.cpp  pyarjun.cpp
scripts/: bpluse-compare.sh  bpluse.sh  build_clang.sh  build_clang_analyze.sh  build_debug.sh  build_emscripten.sh  build_no_extra_synth.sh  build_norm.sh  build_notest.sh  build_release.sh  build_sanitize.sh  build_static.sh  build_static_release.sh  check_synth.py  cnf-fuzz-brummayer.py  cnf_delta.py  convert.py  convert_qdimacs_cnf.py  count_literals.py  create_finalindep_sizes.sh  debug-counts.sh  fuzz_cadet.py  fuzz_interp_repair.py  fuzz_repair.py  fuzz_session_aig_rewrite.sh  fuzz_session_aig_to_cnf.sh  fuzz_session_interp_repair.sh  fuzz_session_unate_def_rep.sh  fuzz_synth.py  fuzz_unate_def_rep.py  run-comparisons.sh  run_all.sh  run_elim_bench.sh  shuffle_vars.py  solved_with_options_pre.sh  solvetimes_from_output_pre_bpe.sh  sweep_interp.py  synth.sh  test_checkrepair.py  todo.sh
scripts/bpe_compare/: count_literals.py
scripts/data/: arjun.sql  arjun.sqlite  create_graphs_arjun.py  get_data_arjun.py
scripts/license_check/: check_all_licenses.sh
scripts/tests/: run_all.sh  test-mc.sh  todo
src/: CMakeLists.txt  GitSHA1.cpp.in  GitSHA1.h  MersenneTwister.h  aig_chain_stats.cpp  aig_fuzz_gen.h  aig_fuzzer.cpp  aig_rewrite.cpp  aig_rewrite.h  aig_rewrite_fuzzer.cpp  aig_sim.cpp  aig_sim.h  aig_to_cnf.cpp  aig_to_cnf.h  aig_to_cnf_fuzzer.cpp  arjun.cpp  arjun.h  arjun_c.cpp  arjun_c.h  arjun_c_priv.hpp  arjun_config.h  arjuntypes.h  autarky.cpp  autarky.h  backward.cpp  backward.h  brute_force_synth.cpp  brute_force_synth.h  cachedsolver.h  cadet.cpp  cadet.h  ccnr.cpp  ccnr.h  ccnr_cms.cpp  ccnr_cms.h  ccnr_mersenne.hpp  common.cpp  common.h  config.h  constants.h  (+54 more)
src/ccnr/: ccnr.cpp  ccnr.h  ccnr_mersenne.h
